--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
     show-sql: true
       
   servlet:
-    multipart:
+    multipart: #멀티파트 타입 파일을 받겠다, 최대 사이즈 2mb
       enabled: true
       max-file-size: 2MB
 
@@ -36,5 +36,5 @@ spring:
       name: test
       password: 1234   
 
-file:
+file: #이경로에 저장하겠다
   path: C:/workspace/springboot/upload/
